--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
     "name" : "cash-flow",
-    "appid" : "",
+    "appid" : "__UNI__0125C03",
     "description" : "",
     "versionName" : "1.0.0",
     "versionCode" : "100",
